--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "@types/react": "^18.2.18",
     "@types/react-dom": "^18.2.7",
     "framer-motion": "^10.15.0",
+    "hamburger-react": "^2.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.10.1",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
+    "react-type-animation": "^3.1.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
