--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "@types/node": "^16.18.39",
     "@types/react": "^18.2.18",
     "@types/react-dom": "^18.2.7",
-    "framer-motion": "^10.15.0",
+    "@types/react-router-dom": "^5.3.3",
+    "framer-motion": "^10.15.1",
     "hamburger-react": "^2.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
