Fix: routing with Pages

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://doge-god.github.io/portfolio2",
+  "homepage": "https://doge-god.github.io/portfolio2/#",
   "name": "fz_portfolio2",
   "version": "0.1.0",
   "private": true,
